Fix mobile view all link placement Fix gap between hero image and text

--- a/styleguide/source/assets/scss/02-molecules/_hero-story.scss
+++ b/styleguide/source/assets/scss/02-molecules/_hero-story.scss
@@ -13,6 +13,7 @@
 
   &__text {
     width: 85%;
+    height: 100%;
     display: flex;
     flex-flow: column nowrap;
     background: $white;
